[package]
name = "buggygame"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = {version = "22.1.0", features=["webgl"]}
wasm-bindgen = "*"
web-sys = { version = "0.3", features = ["Document", "Element", "Window"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.43"

[lib]
crate-type = ["cdylib", "rlib"]